--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.swagger-ui.always-include=true
-quarkus.swagger-ui.path=wareline-poc
+#quarkus.swagger-ui.path=wareline-poc
 
 message.user.error.notfound= Usuario nao encontrado.
