--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ dependencies {
     implementation 'io.quarkus:quarkus-hibernate-validator'
     implementation 'io.quarkus:quarkus-hibernate-orm-panache'
     implementation 'io.quarkus:quarkus-resteasy'
-    implementation("io.quarkus:quarkus-smallrye-openapi")
+    implementation "io.quarkus:quarkus-smallrye-openapi"
+    implementation "io.quarkus:quarkus-security-jpa"
+    implementation "io.quarkus:quarkus-resteasy-jsonb"
     implementation "io.quarkus:quarkus-resteasy-jackson"
     implementation "io.quarkus:quarkus-rest-client-jackson"
     implementation "io.quarkus:quarkus-rest-client"
